--- a/index.css
+++ b/index.css
@@ -1,1 +1,177 @@
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+/* global-variables */
+:root {
+  --fontSize: 2rem;
+  --backgroundColor: #7b12b2;
+  --secondarybgColor: #FFB82F;
+  --borderColor: #a800ff;
+}
+html,body,section{
+ margin: 0;
+ padding: 0;
+}
+h1 , h2 , p {
+  text-align: center;
+  color: white;
+  font-size:var( --fontSize); 
+}
+
+/*------------------nav-bar-----------------------*/
+nav {
+  width:100%;
+}
+nav ul{
+  width:100%;
+  text-align: right;
+  position: fixed;
+  background-color: var(--backgroundColor);
+  margin-top:0;
+}
+nav ul li {
+  display: inline-block;
+  font-size: var(--fontSize);
+  background-color: var(--backgroundColor);
+  margin: 40px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  cursor:pointer;
+}
+nav ul li a {
+  text-decoration:none;
+  color: var(--secondarybgColor); 
+}
+ nav ul li:hover {
+  width:5%;
+  text-align:center;
+  color: white;
+  background-color: var(--backgrounndColor);
+}
+nav ul li a:hover {
+  color: white;
+}
+
+/*------------------welcome-section------------------------*/
+
+#welcome-section {
+  background-color:var(--secondarybgColor);
+  width: 100%;
+  min-height: 55vh;
+  padding-top: 45vh; 
+  top:0;
+}
+#welcome-section  h1,  #welcome-section h2 {
+  color:var(--backgroundColor);   
+}
+#profile-img img {
+  height:200px;
+  width:250px;
+	display: block;
+  margin-left: auto;
+	margin-right: auto;
+  margin-top:-150px;
+  border:12px var(--borderColor) solid;
+  border-radius: 50%;
+}
+#profile-img img:hover {
+  border-radius: 20%;
+  border:12px var(--borderColor) solid;
+}
+/*------------------projects-----------------------*/
+#projects {
+ background-color: var(--backgroundColor);
+ width:100%;
+ padding 0;
+ margin-top:-40px;
+ 
+ border-top:6px var(--borderColor) solid;
+}
+#title-project{
+  font-weight: normal;
+  color: var(--secondarybgColor);
+  margin-top: 0;
+  padding-top:25px;
+}
+#container-four {
+  display:flex;
+}
+.container-four {
+  width:25%;
+  height:100%;
+  margin-bottom:20px;
+/*   border:2px red solid;  */
+}
+.container-four img {
+  width: 90%;
+  height:300px;
+  border:2px var(--secondarybgColor) solid;
+}
+.project {
+  text-decoration:none;
+  background-color:var(--backgroundColor);
+  
+}
+.project .project-title {
+  text-decoration:none;
+  text-align:center;
+  font-size:20px;
+  width: 90%;
+  font-size:1rem;
+  color:var(--secondarybgColor);
+  border:2px var(--secondarybgColor) solid;
+}
+.container-four .project .project-title:hover {
+  color:white;
+  background-color:var(--backgroundColor);  
+}
+/*------------------social-media-----------------------*/
+#social-media {
+  background-color: var(--secondarybgColor);
+  padding:10px;
+  
+  
+}
+#social-media h1,h2 {
+  margin-bottom:40px;
+  color:var(--backgroundColor);
+}
+.social-media {
+  display:flex;
+  justify-content: space-evenly;
+}
+.social-media img {
+  width:120px;
+  height:80px;
+}
+ .clip-circle {
+  border-radius: 50%;
+  border:12px var(--borderColor) solid;
+  margin-bottom:40px;
+}
+.clip-circle:hover {
+  border-radius: 50%;
+  border:12px white solid;
+  margin-bottom:40px;
+}
+/*------------------footer-----------------------*/
+footer {
+  background-color:var(--backgroundColor);
+  padding:10px; /*  fix-overlay */
+  color: white;
+}
+footer * {
+  color: var(--secondarybgColor);   
+}
+footer span ,footer a{
+  color: white;
+  text-decoration:none;
+  font-size:2.2rem;
+}
+
+/* change when the screen reach 35rem */
+@media only screen and  (min-height: 35rem) {
+  #welcome-section {
+    background-color:(--secondarybgColor);
+  }
+  nav ul{
+    text-align:center;    
+  } 
+}
